--- a/Rails-Seven-Seas/app/views/seas/show.html.erb
+++ b/Rails-Seven-Seas/app/views/seas/show.html.erb
@@ -5,8 +5,8 @@
     <h2 class="text-center"><%= @sea.name %> </h2>
     <p><%= @sea.bio %></p>
     <button class="btn btn-info" style="margin: 1em"><a href="/seas/<%=@sea.id%>/edit">Edit</a></button>
-    <button class="btn btn-info" style="margin: 1em"><%= link_to "fgbbgdelete", sea_path(@sea)%></button>
-
+    <button class="btn btn-info" style="margin: 1em"><a href="/seas">Back</a></button>
+    <button class="btn btn-info" style="margin: 1em"><%= link_to "Delete", sea_path(@sea), method: :delete, data: { confirm: "r u sure delete"} %></button>
     <div>
       <ul class="list-group">
         <li class="list-group-item">Temperature: <%= @sea.temperature %>&#176 F</li>
